# spritter-cli

./: README.md  pyproject.toml
src/: cli.py
