[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spritter-cli"
version = "0.1.0"
description = "Spritter CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "spritter" }]
dependencies = [
  "spritter @ git+https://github.com/spritter-org/spritter.git@c68fe70d0bdb92c2dbd33d273a5e0bd9814575b4",
]

[project.scripts]
spritter = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
